Additional financing changes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AdoptionCentre
+application.vendor=lingfengzhou
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,28 +25,44 @@ debug.test.classpath=\
     ${run.test.classpath}
 debug.test.modulepath=\
     ${run.test.modulepath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Child_Adoption.jar
+dist.jar=${dist.dir}/AdoptionCentre.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Child_Adoption
+endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=AbsoluteLayout.jar
+file.reference.activation.jar=activation.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar-1=db4o-8.0.184.15484-all-java5.jar
+file.reference.jcommon-1.0.23.jar-2=jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar-1=jfreechart-1.0.19/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-2=jfreechart-1.0.19.jar
+file.reference.jxdatepicker-support-1.0.jar-1=jxdatepicker-support-1.0.jar
+file.reference.jxmapviewer2-1.1.jar=jxmapviewer2-1.1.jar
+file.reference.mail.jar=mail.jar
+file.reference.swingx-all-1.6.4.jar-2=swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar-1}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.jxmapviewer2-1.1.jar}:\
+    ${file.reference.jxdatepicker-support-1.0.jar-1}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar-2}:\
+    ${file.reference.jfreechart-1.0.19.jar-2}:\
+    ${file.reference.jcommon-1.0.23.jar-2}:\
+    ${file.reference.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=true
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=12
-javac.target=12
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -65,23 +82,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-# The jlink additional root modules to resolve
-jlink.additionalmodules=
-# The jlink additional command line parameters
-jlink.additionalparam=
-jlink.launcher=true
-jlink.launcher.name=Child_Adoption
-main.class=Pet.adoption.ChildAdoption
+jlink.launcher=false
+jlink.launcher.name=AdoptionCentre
+main.class=userinterface.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+no.dependencies=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
+# Space-separated list of JVM arguments used when running the project
+# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
+# or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
