--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,25 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.hamcrest-core-1.3-sources.jar=/Users/snehaswaroop/NetBeansProjects/hamcrest-core-2.2.jar
+file.reference.hamcrest-core-1.3.jar=/Users/snehaswaroop/NetBeansProjects/hamcrest-core-2.2.jar
+file.reference.hamcrest-core-1.3.jar-1=/Users/snehaswaroop/NetBeansProjects/hamcrest-core-2.2.jar
+file.reference.jcommon-1.0.23.jar=/Users/snehaswaroop/NetBeansProjects/jcommon-1.0.24.jar
+file.reference.jcommon-1.0.23.jar-1=/Users/snehaswaroop/NetBeansProjects/jcommon-1.0.24.jar
+file.reference.jfreechart-1.0.19-experimental.jar=/Users/snehaswaroop/NetBeansProjects/jfreechart-1.0.17.jar
+file.reference.jfreechart-1.0.19-swt.jar=/Users/snehaswaroop/NetBeansProjects/jfreechart-1.0.17.jar
+file.reference.jfreechart-1.0.19.jar=/Users/snehaswaroop/NetBeansProjects/jfreechart-1.0.17.jar
+file.reference.jfreechart-1.0.19.jar-1=/Users/snehaswaroop/NetBeansProjects/jfreechart-1.0.17.jar
+file.reference.jfreesvg-2.0.jar=/Users/snehaswaroop/NetBeansProjects/jfreesvg-3.1.jar
+file.reference.junit-4.11.jar=/Users/snehaswaroop/NetBeansProjects/junit-4.13.2.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=/Users/snehaswaroop/NetBeansProjects/orsoncharts-1.7.jar
+file.reference.orsonpdf-1.6-eval.jar=/Users/snehaswaroop/NetBeansProjects/orsonpdf-1.8.jar
+file.reference.servlet.jar=/Users/snehaswaroop/NetBeansProjects/servlet.jar
+file.reference.swingx-all-1.6.4.jar=/Users/snehaswaroop/NetBeansProjects/swingx-all-1.6.4.jar
+file.reference.swingx-all-1.6.4.jar-1=/Users/snehaswaroop/NetBeansProjects/swingx-all-1.6.4.jar
+file.reference.swtgraphics2d.jar=/Users/snehaswaroop/NetBeansProjects/swtgraphics2d-1.0.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=/Users/anushree_j/Library/Application Support/NetBeans/15/build.properties
