--- a/CHILD ADOPTION/nbproject/project.properties
+++ b/CHILD ADOPTION/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=CHILD ADOPTION
+application.vendor=LENOVO
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,29 @@ dist.jar=${dist.dir}/CHILD_ADOPTION.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CHILD_ADOPTION
+endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=dist\\lib\\AbsoluteLayout.jar
+file.reference.activation.jar=dist\\lib\\activation.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar=dist\\lib\\db4o-8.0.184.15484-all-java5.jar
+file.reference.jcommon-1.0.23.jar=dist\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=dist\\lib\\jfreechart-1.0.19.jar
+file.reference.jxdatepicker-support-1.0.jar=dist\\lib\\jxdatepicker-support-1.0.jar
+file.reference.jxmapviewer2-1.1.jar=dist\\lib\\jxmapviewer2-1.1.jar
+file.reference.mail.jar=dist\\lib\\mail.jar
+file.reference.swingx-all-1.6.4.jar=dist\\lib\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jxdatepicker-support-1.0.jar}:\
+    ${file.reference.jxmapviewer2-1.1.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +91,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=CHILD_ADOPTION
-main.class=child.adoption.CHILDADOPTION
+main.class=userinterface.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
